# Casino-tiago

./: .gitignore  docker-compose.yml
backend/: .dockerignore  Dockerfile  main.py  nixpacks.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 267e81ba11e2_initial_state.py  2825785f5498_add_pokertable.py  3a2c4e5b6d7f_add_crash_models.py
backend/app/api/: router.py
backend/app/modules/games/api/: router.py  ws_crash_router.py  ws_poker_router.py  ws_router.py
backend/app/modules/games/application/: blackjack_service.py  poker_evaluator.py  services.py  ws_blackjack_service.py  ws_crash_service.py  ws_poker_service.py
backend/app/modules/games/blackjack/: multiplayer_router.py  multiplayer_service.py  router.py  schemas.py  service.py
backend/app/modules/games/crash/: router.py  service.py
backend/app/modules/games/domain/: entities.py  multiplayer_entities.py
backend/app/modules/games/infrastructure/: models.py
backend/app/modules/games/plinko/: router.py  schemas.py  service.py
backend/app/modules/games/poker/: evaluator.py  multiplayer_router.py  multiplayer_service.py
backend/app/modules/games/roulette/: router.py  schemas.py  service.py
backend/app/modules/games/shared/: schemas.py
backend/app/modules/games/slots/: router.py  schemas.py  service.py
backend/app/modules/users/api/: router.py
backend/app/modules/users/application/: services.py
backend/app/shared/: config.py  database.py  dependencies.py  security.py  websockets.py
backend/app/shared/__pycache__/: config.cpython-312.pyc.1909901406544
(+32 files in other folders)
